--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="top"></div>
   <header id="top">
     <h1>Gabriel Lennon</h1>
     <nav>
@@ -37,54 +36,84 @@
   <section id="competences">
     <h2>Mes Compétences</h2>
     <div class="competence">
-      <h3>HTML / CSS</h3>
-      <p><strong>Situation :</strong> Projet personnel/client – Site Web</p>
-      <p><strong>Tâche :</strong> Programmation du site avec HTML/CSS</p>
-      <p><strong>Action :</strong> Implémentation selon les besoins du client avec Replit et VS Code</p>
-      <p><strong>Résultat :</strong> Travail d’équipe réussi, site fonctionnel</p>
+        <div class="competence-content">
+          <div class="texte">
+            <h3>Réaliser un développement d'application</h3>
+            <p><strong>Situation :</strong> Projet - Implémentation client d'un jeu Snake</p>
+            <p><strong>Tâche :</strong> Développement complet du jeu en C</p>
+            <p><strong>Action :</strong> Codage en incrémentale et cahier de tests</p>
+            <p><strong>Résultat :</strong> Programme de qualité qui compile sans problèmes</p>
+          </div>
+          <img src="snake.png" alt="Illustration" class="competence-img">
+        </div>
+      </div>
+      
+    <div class="competence">
+        <div class="competence-content">
+            <div class="texte">
+            <h3>Optimiser des applications informatiques</h3>
+            <p><strong>Situation :</strong> Projet – Jeu Snake autonome</p>
+            <p><strong>Tâche :</strong> Problèmes algorithmiques</p>
+            <p><strong>Action :</strong> Code d'algorithmes et gestion des entrées</p>
+            <p><strong>Résultat :</strong> Amélioration de la ponctualité et des compétences algorithmiques</p>
+        </div>
+        <img src="snake2.png" alt="Illustration" class="competence-img2">
+        </div>
     </div>
     <div class="competence">
-      <h3>Langage C</h3>
-      <p><strong>Situation :</strong> Projet académique – Jeu Snake</p>
-      <p><strong>Tâche :</strong> Développement complet du jeu en C</p>
-      <p><strong>Action :</strong> Codé algorithmes et gestion des entrées</p>
-      <p><strong>Résultat :</strong> Amélioration de la ponctualité et des compétences algorithmiques</p>
+        <div class="competence-content">
+            <div class="texte">
+      <h3>Administrer des systèmes informatiques communicants complexes</h3>
+      <p><strong>Situation :</strong> Projet – Analyse de données</p>
+      <p><strong>Tâche :</strong> Production et modification d'image</p>
+      <p><strong>Action :</strong> Utilisation de docker et de ses différents outils</p>
+      <p><strong>Résultat :</strong>  Rendu des documents exploitable dans le temps imparti</p>
     </div>
-    <div class="competence">
-      <h3>Python</h3>
-      <p><strong>Situation :</strong> Projet de TP – Analyse de données</p>
-      <p><strong>Tâche :</strong> Utilisation de bibliothèques pour traiter des données</p>
-      <p><strong>Action :</strong> Scripts automatisés d’analyse</p>
-      <p><strong>Résultat :</strong> Résultats exploitables, gain de temps</p>
+    <img src="docker.png" alt="Illustration" class="competence-img">
     </div>
-    <div class="competence">
-      <h3>Gestion de projet</h3>
-      <p><strong>Situation :</strong> Projet en équipe en BUT</p>
+</div>
+<div class="competence">
+    <div class="competence-content">
+        <div class="texte">
+      <h3>Gérer des données de l'information</h3>
+      <p><strong>Situation :</strong> Projet – Analyse de données</p>
+      <p><strong>Tâche :</strong> Schéma relationnel</p>
+      <p><strong>Action :</strong> Traduction d'un diagramme de classes</p>
+      <p><strong>Résultat :</strong> Rendu du script dans une base commune</p>
+    </div>
+    <img src="diag.png" alt="Illustration" class="competence-img">
+    </div>
+</div>
+<div class="competence">
+    <div class="competence-content">
+        <div class="texte">
+      <h3>Conduite de projet</h3>
+      <p><strong>Situation :</strong> Projet  – Rédaction d'une SEL</p>
+      <p><strong>Tâche :</strong> Analyse du besoin EllaDanse</p>
+      <p><strong>Action :</strong> Organigrame des taches et matrice RACI</p>
+      <p><strong>Résultat :</strong> Soutenance approfondis de l'analyse du besoin</p>
+    </div>
+    <img src="raci.png" alt="Illustration" class="competence-img">
+    </div>
+</div>
+<div class="competence">
+    <div class="competence-content">
+        <div class="texte">
+      <h3>Travailler dans une équipe informatique</h3>
+      <p><strong>Situation :</strong> Projet en équipe </p>
       <p><strong>Tâche :</strong> Répartition des rôles, suivi des livrables</p>
       <p><strong>Action :</strong> Utilisation de Trello et réunions hebdomadaires</p>
       <p><strong>Résultat :</strong> Projet livré dans les délais avec documentation claire</p>
     </div>
-    <div class="competence">
-      <h3>Base de données</h3>
-      <p><strong>Situation :</strong> Projet scolaire – Création d’une base MySQL</p>
-      <p><strong>Tâche :</strong> Conception et requêtes</p>
-      <p><strong>Action :</strong> Utilisation de MySQL Workbench</p>
-      <p><strong>Résultat :</strong> Base de données fonctionnelle et optimisée</p>
+    <img src="trello.jpg" alt="Illustration" class="competence-img">
     </div>
-    <div class="competence">
-      <h3>Communication</h3>
-      <p><strong>Situation :</strong> Stage en entreprise</p>
-      <p><strong>Tâche :</strong> Tri de documents, échanges clients</p>
-      <p><strong>Action :</strong> Communication orale claire</p>
-      <p><strong>Résultat :</strong> Bonne intégration et relationnel professionnel</p>
-    </div>
+</div>
   </section>
 
   <footer id="contact">
     <h2>Contact</h2>
     <p><strong>Téléphone :</strong> 06 33 64 93 22</p>
     <p><strong>Email :</strong> gabriel.lennon@gmail.com</p>
-    <p><strong>LinkedIn :</strong> (à compléter)</p>
     <a href="#top">Revenir en haut</a>
   </footer>
 </body>
