--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
             <p><strong>Action :</strong> Codage en incrémentale et cahier de tests</p>
             <p><strong>Résultat :</strong> Programme de qualité qui compile sans problèmes</p>
           </div>
-          <img src="snake.png" alt="Illustration" class="competence-img">
+          <a href="snake4LENNONGabriel (2).c" download>
+      <img src="snake.png" alt="Illustration" class="competence-img">
+    </a>
         </div>
       </div>
       
